--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Моё портфолио</title>
 </head>
 <body>
-    <h1>Привет, я Колесников Роман</h1>h1>
-    <p>Студент колледжа</p>
-
-    <h2>Обо мне</h2>
-    <p>Учусь, делаю простые сайты, изучаю HTML.</p>
-
-    <h2>Контакты</h2>
-    <p>GitHub: https://github.com/criex2281337</p>
+    <div class="main">
+        <h1 class="title">Привет, я Колесников Роман</h1>
+        <p class="text">Я начинающий Программист, языков Python, C, C#, C++, SQL, 1C, Pascal, HTML.</p>
+        <p>
+            Контакты:
+        </p>
+        <p>
+            GitHub: https://github.com/criex2281337
+        </p>
+    </div>
 </body>
-</html>
