--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="main">
         <h1 class="title">Привет, я Колесников Роман</h1>
-        <p class="text">Я начинающий Программист, языков Python, C, C#, C++, SQL, 1C, Pascal, HTML.</p>
+        <p class="text">Я начинающий программист, изучаю языки Python, C, C#, C++, SQL, HTML.</p>
         <p>
             Контакты:
         </p>
